--- a/Locations/src/main/resources/application.properties
+++ b/Locations/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=9090
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/root
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 #Adding Review 
